# llvm-project

mlir/examples/standalone/: CMakeLists.txt
mlir/examples/standalone/include/Standalone/: CMakeLists.txt  Passes.h  ShapeInferenceInterface.h  StandaloneCombine.td  StandaloneOps.h  StandaloneOps.td
mlir/examples/standalone/lib/Standalone/: CMakeLists.txt  LowerToAffineLoops.cpp  LowerToLLVM.cpp  LowerToLinalg.cpp  ShapeInferencePass.cpp  StandaloneDialect.cpp  StandaloneOps.cpp
mlir/examples/standalone/standalone-pipeline/: AST.cpp  AST.h  CMakeLists.txt  Lexer.h  MLIRGen.cpp  MLIRGen.h  Parser.h  standalone-pipeline.cpp
mlir/examples/standalone/standalone-pipeline/include/standalone/: AST.h  Lexer.h  MLIRGen.h  Parser.h
mlir/examples/standalone/standalone-pipeline/mlir/: MLIRGen.cpp
mlir/examples/standalone/standalone-pipeline/parser/: AST.cpp
